Create Model and DBContext + add log4net for logging

--- a/NC_Monitoring/appsettings.json
+++ b/NC_Monitoring/appsettings.json
@@ -1,7 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication2-EC12ED77-C953-4E94-9051-44BE76A344F7;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "NC_Monitoring_DefaultConnection": "Data Source=VESELY-PC\\SQL16;Initial Catalog=NC_MONITORING;Persist Security Info=True;User ID=sa;Password=***REMOVED***;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NC_Monitoring;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
