--- a/NC_Monitoring/NC_Monitoring.csproj
+++ b/NC_Monitoring/NC_Monitoring.csproj
@@ -20,6 +20,9 @@
     <PackageReference Include="DevExtreme.AspNet.Data" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.8.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
     <PackageReference Include="NC" Version="1.0.0" />
@@ -33,6 +36,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="NC\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NC_Monitoring.Data\NC_Monitoring.Data.csproj" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
