--- a/NC_Monitoring/bower.json
+++ b/NC_Monitoring/bower.json
@@ -1,11 +1,13 @@
 {
-    "name": "asp.net",
-    "private": true,
-    "dependencies": {
-        "bootstrap": "3.3.7",
-        "jquery": "3.1.0",
-        "jquery-validation": "1.14.0",
-        "jquery-validation-unobtrusive": "3.2.6",
-        "devextreme-aspnet-data": "1.4.5"
-    }
+  "name": "asp.net",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "3.3.7",
+    "jquery": "3.1.0",
+    "jquery-validation": "1.14.0",
+    "jquery-validation-unobtrusive": "3.2.6",
+    "devextreme": "^18.2.4",
+    "devextreme-aspnet-data": "^2.1.0",
+    "fontawesome": "^5.6.3"
+  }
 }
