Odesilani chyb pomoci emailu (pouziti jednoduche fronty)

--- a/NC_Monitoring.Console/appsettings.json
+++ b/NC_Monitoring.Console/appsettings.json
@@ -1,5 +1,15 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NC_Monitoring;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MonitoringInterval": "0:00:10",
+  "Email": {
+    "From": "veselytest@seznam.cz",
+    "Smtp": {
+      "Host": "smtp.seznam.cz",
+      "Port": 25,
+      "Username": "veselytest@seznam.cz",
+      "Password": "kez10.bc."
+    }
   }
 }
