nastaveni logovani v konzoli

--- a/NC_Monitoring.Console/appsettings.json
+++ b/NC_Monitoring.Console/appsettings.json
@@ -11,5 +11,13 @@
       "Username": "veselytest@seznam.cz",
       "Password": "kez10.bc."
     }
+  },
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Information",
+      "System": "Warning",
+      "Microsoft": "Warning"
+    }
   }
 }
