--- a/NC_Monitoring/appsettings.json
+++ b/NC_Monitoring/appsettings.json
@@ -2,6 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NC_Monitoring;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Email": {
+    "From": "veselytest@seznam.cz",
+    "Smtp": {
+      "Host": "smtp.seznam.cz",
+      "Port": 25,
+      "Username": "veselytest@seznam.cz",
+      "Password": "kez10.bc."
+    }
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
