ChannelManagerTest, Rename ApiChannelControllerTest, upgrade NC packages

--- a/NC_Monitoring.xUnitTest/NC_Monitoring.Test.csproj
+++ b/NC_Monitoring.xUnitTest/NC_Monitoring.Test.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\NC_Monitoring\NC_Monitoring.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DbContext\" />
+  </ItemGroup>
+
 </Project>
