nuget feed ncompany

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,6 +2,7 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="ncompany.cz" value="https://nuget.ncompany.cz/nuget" />
     <add key="DevExpress Nuget Feed" value="https://nuget.devexpress.com/yAvbxl4VimILVfsljH6f5VGglOjjD1SaBeAMipIr2hzRsGasQc/api" />
   </packageSources>
   <packageRestore>
