--- a/NC_Monitoring/NC_Monitoring.csproj
+++ b/NC_Monitoring/NC_Monitoring.csproj
@@ -20,7 +20,7 @@
     <Content Include="appsettings.development.json">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="bower.json" />    
+    <Content Include="bower.json" />
     <Content Include="Properties\launchSettings.json" />
   </ItemGroup>
   <ItemGroup>
@@ -31,14 +31,14 @@
     <PackageReference Include="DevExtreme.AspNet.Core" Version="18.2.3" />
     <PackageReference Include="DevExtreme.AspNet.Data" Version="2.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.8.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink.Loader" Version="14.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.5"/>
     <PackageReference Include="NC" Version="1.0.0" />
     <PackageReference Include="NC.AspNetCore" Version="1.2.0" />
     <PackageReference Include="NC.DevExtreme.AspNetCore" Version="1.3.2" />
