--- a/NC_Monitoring/appsettings.json
+++ b/NC_Monitoring/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NC_Monitoring;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
@@ -9,5 +9,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "cddb7fe5-3617-45a3-860b-6025ca5d8e0a"
   }
 }
