--- a/NC_Monitoring/appsettings.json
+++ b/NC_Monitoring/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "GlobalAdmins": [],
+  "Email": {
+    "Smtp": {
+      "Host": "",
+      "Port": "",
+      "Username": "",
+      "Password": ""
+    },
+    "From": ""
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NC_Monitoring;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
