--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,19 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <packageSources>
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="ncompany.cz" value="https://nuget.ncompany.cz/nuget" />
-    <add key="DevExpress Nuget Feed" value="https://nuget.devexpress.com/yAvbxl4VimILVfsljH6f5VGglOjjD1SaBeAMipIr2hzRsGasQc/api" />
-  </packageSources>
+
   <packageRestore>
     <add key="enabled" value="True" />
     <add key="automatic" value="True" />
   </packageRestore>
-  <bindingRedirects>
-    <add key="skip" value="False" />
-  </bindingRedirects>
-  <packageManagement>
-    <add key="format" value="0" />
-    <add key="disabled" value="False" />
-  </packageManagement>
+
+  <activePackageSource>
+    <add key="All" value="(Aggregate source)" />
+  </activePackageSource>
+
+  <packageSources>
+    <!-- Ditch all the Global NuGet package sources we only want a 
+         single private NuGet repo for this project -->
+    <clear />
+
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+
+    <add key="devexpress" value="https://nuget.devexpress.com/yAvbxl4VimILVfsljH6f5VGglOjjD1SaBeAMipIr2hzRsGasQc/api" />
+
+    <add key="ncnuget" value="https://pkgs.dev.azure.com/veselyncompany/_packaging/ncnuget/nuget/v3/index.json" />
+
+  </packageSources>
+
+  <disabledPackageSources>
+
+  </disabledPackageSources>
+
 </configuration>
