--- a/src/NC_Monitoring/NC_Monitoring.csproj
+++ b/src/NC_Monitoring/NC_Monitoring.csproj
@@ -42,6 +42,7 @@
     <PackageReference Include="NC" Version="1.0.0" />
     <PackageReference Include="NC.AspNetCore" Version="1.2.0" />
     <PackageReference Include="NC.DevExtreme.AspNetCore" Version="1.3.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="BundlerMinifier.Core">
