NotificationEmailOnError remove antos@ncomapny.cz

--- a/NC_Monitoring.Console/appsettings.json
+++ b/NC_Monitoring.Console/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConsoleApp": {
-    "NotificationEmailOnError": "vesely@ncompany.cz;antos@ncompany.cz"
+    "NotificationEmailOnError": "vesely@ncompany.cz;"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NC_Monitoring;Trusted_Connection=True;MultipleActiveResultSets=true",
