--- a/src/NC_Monitoring/NC_Monitoring.csproj
+++ b/src/NC_Monitoring/NC_Monitoring.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Castle.Core" Version="4.3.1" />
     <PackageReference Include="DevExtreme.AspNet.Core" Version="18.2.3" />
     <PackageReference Include="DevExtreme.AspNet.Data" Version="2.0.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.9.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.1.0" />
