--- a/src/NC_Monitoring/NC_Monitoring.csproj
+++ b/src/NC_Monitoring/NC_Monitoring.csproj
@@ -11,6 +11,7 @@
     <UserSecretsId>afc4d441-6130-4951-bbd6-00806b620cc7</UserSecretsId>
     <ApplicationInsightsResourceId>/subscriptions/b7f283f8-1543-415f-be6d-16a475f883fb/resourcegroups/NCMonitoringTest/providers/microsoft.insights/components/NCMonitoring20190122042034</ApplicationInsightsResourceId>
     <ApplicationInsightsAnnotationResourceId>/subscriptions/b7f283f8-1543-415f-be6d-16a475f883fb/resourcegroups/NCMonitoringTest/providers/microsoft.insights/components/NCMonitoring20190122042034</ApplicationInsightsAnnotationResourceId>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="wwwroot\**\*;Views\**\*;Areas\**\Views;appsettings.json;web.config">
