feat: ConsoleApp as WindowsService

--- a/src/NC_Monitoring.Console/appsettings.json
+++ b/src/NC_Monitoring.Console/appsettings.json
@@ -2,10 +2,8 @@
   "ConsoleApp": {
     "NotificationEmailOnError": "vesely@ncompany.cz;"
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NC_Monitoring;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "MonitoringInterval": "*/5 * * * * *",
+  "MonitoringIntervalSeconds":  10,
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
