--- a/src/NC_Monitoring.Console/log4net.config
+++ b/src/NC_Monitoring.Console/log4net.config
@@ -9,12 +9,30 @@
       <rollingStyle value="Date"/>
       <maxSizeRollBackups value="100"/>
       <maximumFileSize value="15MB"/>
-      <layout type="log4net.Layout.PatternLayout">        
-        <conversionPattern value="%date{yyyy-MM-dd HH:mm:ss} %5level [%thread] - %message%newline"/>        
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{yyyy-MM-dd HH:mm:ss} %5level [%thread] - %message%newline"/>
       </layout>
+    </appender>
+    <appender name="ErrorsFileAppender" type="log4net.Appender.RollingFileAppender">
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file value="C:\Temp\NC_Monitoring\Console\Error" />
+      <datePattern value="yyyy-MM-dd.'txt'"/>
+      <staticLogFileName value="false"/>
+      <appendToFile value="true"/>
+      <rollingStyle value="Date"/>
+      <maxSizeRollBackups value="100"/>
+      <maximumFileSize value="15MB"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date{yyyy-MM-dd HH:mm:ss} %5level [%thread] - %message%newline"/>
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="ERROR" />
+        <levelMax value="FATAL" />
+      </filter>
     </appender>
     <root>
       <level value="ALL"/>
       <appender-ref ref="RollingLogFileAppender"/>
+      <appender-ref ref="ErrorsFileAppender" />
     </root>
   </log4net>
