chore: launch profiles

--- a/src/NC_Monitoring.Console/Properties/launchSettings.json
+++ b/src/NC_Monitoring.Console/Properties/launchSettings.json
@@ -1,9 +1,31 @@
 {
   "profiles": {
-    "NC_Monitoring.ConsoleApp": {
+    "Development": {
       "commandName": "Project",
+      "launchBrowser": false,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "development"
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Production": {
+      "commandName": "Project",
+      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
+    },
+    "Staging": {
+      "commandName": "Project",
+      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Staging"
+      }
+    },
+    "Testing": {
+      "commandName": "Project",
+      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Testing"
       }
     }
   }
