--- a/src/NC_Monitoring.Data/NC_Monitoring.Data.csproj
+++ b/src/NC_Monitoring.Data/NC_Monitoring.Data.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
     <PackageReference Include="NC.AspNetCore" Version="1.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NC\NC.csproj" />
+  </ItemGroup>
 </Project>
